chamber/styles/discover-base.css
* {
    --primary-color: #1C2C4B;
    --secondary-color: #1C75BB;
    --background-color: #959595 ;
    --accent-color: #F3BE3C;
    --text-color: #414042;
    --alternative-text-color: #fff;
    --footer-color: #dadada;

    font-family: 'Fira Sans', sans-serif;

}

/* MAIN */

/* Hero */

#hero {
    display: flex;
    position: relative;
    /* background-color: aquamarine; */
    justify-content: center;
    /* overflow: hidden; */
    /* This margin applies to the whole hero */
    margin: 0; /*Nothing for now...*/
}

#hero::before{

    /* Apply a shadow layer over the image */
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, .5);
}

#hero img{
    object-fit: contain;
    max-width: 100%;
    max-height: 100%;
}


.hero-text{
    position: absolute;
    top: 30%;
    /* left: 50%; */
    /* transform: translate(-50%, -95%); */
    text-align: center;
    color: #fff;
    

}

#lastVisited{
    display: inline-block;
    background-color: var(--accent-color);
    color: var(--text-color);
    padding:1em;
    margin: 1rem;
}

/* End hero */

/* Demographics card */

#demographics-cards{
    display: grid;
    /* max-height: 30em; */



    /* This aligns the containers */
    align-items: center;
    justify-content: center;
    /* gap: 2em; */

    overflow: hidden;
    max-height: 22em;
    transition: max-height 0.5s ease-out;
}

#demographics-cards.open{
    max-height: 80em;
}

.demo-card{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    margin: 1.5em 0;
}

/* .demo-card.hide{
    display: none;
}

.demo-card.unhide{
    display: block;
    

} */

